Update Logistic Regression Summary

--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -294,6 +294,151 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Logistic Regression Gradient Descent](https://www.dropbox.com/s/v1dbvpozhczoyzn/logistic_gradient_descent.jpg?raw=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$da = \\frac{d}{da}L(a, y) = \\frac{d}{da}(-y\\log{a} -(1-y)\\log{(1-a)}) = \\frac{-y}{a} + \\frac{1-y}{1-a}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$dz = \\frac{dL}{dz} = \\frac{dL}{da} \\cdot \\frac{da}{dz} = da \\cdot \\sigma^\\prime(z) = a - y$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$dw = dz \\cdot x$$\n",
+    "$$db = dz$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost : 1.051453 \n",
+      " W1 : 3.038138 \n",
+      " W2 : 1.967545"
+     ]
+    }
+   ],
+   "source": [
+    "# Set seed\n",
+    "set.seed(1990)\n",
+    "\n",
+    "# Generate data\n",
+    "x3 <- seq(-5, 6, 0.5)\n",
+    "y3_temp <- 1/(1+exp(-(3*x3 + 2))) # W = 3, b = 2\n",
+    "y3 <- ifelse(y3_temp >= 0.5, 1, 0)\n",
+    "\n",
+    "# Load library\n",
+    "library(dplyr)\n",
+    "\n",
+    "# Initialize w randomly\n",
+    "w <- sample(seq(-0.1, 0.1, length.out = 100), 2) %>% matrix(nrow = 2)\n",
+    "previous_cost <- NULL\n",
+    "learning_rate <- 0.01\n",
+    "epsilon <- 0.00001\n",
+    "\n",
+    "cost_list <- c()\n",
+    "w1_list <- c()\n",
+    "w2_list <- c()\n",
+    "for (i in 1:10000) { # Iterate 10000 times\n",
+    "    y_hat <- 1/(1+exp(-(w[1]*x3 + w[2]))) # Predict y\n",
+    "    \n",
+    "    # Calculate cost\n",
+    "    cost_temp <- c()\n",
+    "    for (j in 1:length(y3)) {\n",
+    "        if (y3[j] == 1) {\n",
+    "            cost <- -log(y_hat[j])\n",
+    "        } else if (y3[j] == 0) {\n",
+    "            cost <- -log(1-y_hat[j])\n",
+    "        }\n",
+    "        cost_temp <- c(cost_temp, cost)\n",
+    "    }\n",
+    "    cost <- sum(cost_temp) \n",
+    "    \n",
+    "    if (i > 1) { # Check after first prediction\n",
+    "        if (epsilon > abs(previous_cost - cost)) { # Break if cost change amount is less than threshold\n",
+    "            cat(\"Stop at iter\", i, \", Cost change amount is less than threshold\", \"\\n\")\n",
+    "            break\n",
+    "        }\n",
+    "    }\n",
+    "    previous_cost <- cost # Change the previous cost\n",
+    "    cost_list <- c(cost_list, cost) # Reserve the cost\n",
+    "    \n",
+    "    # Update W\n",
+    "    w[1] <- w[1] - learning_rate * mean((y_hat-y3)*x3)\n",
+    "    w[2] <- w[2] - learning_rate * mean((y_hat-y3))\n",
+    "    \n",
+    "    # Reserve the weights\n",
+    "    w1_list <- c(w1_list, w[1])\n",
+    "    w2_list <- c(w2_list, w[2])\n",
+    "}\n",
+    "# Print final weights\n",
+    "cat(\"Cost :\", cost_list[length(cost_list)], \"\\n\", \"W1 :\", w1_list[length(w1_list)], \"\\n\", \"W2 :\", w2_list[length(w2_list)])\n",
+    "\n",
+    "# Make dataframe for plotting\n",
+    "cost.df <- data.frame(iter = 1:length(cost_list), cost = cost_list, w1 = w1_list, w2 = w2_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "경사하강법을 통해 구한 회귀 계수는 $\\hat{W} = \\begin{bmatrix} 3.038138  \\\\ 1.967545 \\end{bmatrix}$로 실제 $W = \\begin{bmatrix} 3 \\\\ 2 \\end{bmatrix}$와 유사하다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {},
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAA0gAAANICAMAAADKOT/pAAAAPFBMVEUAAABGgrRNTU1oaGh8\nfHx8zXyMjIyampqnp6eysrK9vb3Hx8fQ0NDZ2dnh4eHp6enr6+vw8PD/jAD///9E46CPAAAA\nCXBIWXMAABJ0AAASdAHeZh94AAAgAElEQVR4nO3di3bayBZFUTV2x07n4Yf+/18bsAEBElJV\nnYK9S+uMcWM7nTtdLrQiENjpeoZhiqd79AIYpoUhJIYJGEJimIAhJIYJGEJimIAhJIYJGEJi\nmIAhJIYJGEJimIAhJIYJGEJimIAhJIYJGEJimIAhJIYJGEJimIAhJIYJGEJimIAhJIYJGEJi\nmIAhJIYJGEJimIAhJIYJGEJimIAhJIYJGEJimIAhJIYJGEJaMN1xHr0SRnU4NBZMhZCKsW7s\nzdl717dt2ifN+QzrPaDW+nUnT+jZ6AsbExd/lu77127w0YR19nb5l5HxGYK3yWnW+nUnz9cR\n8tE9Hd5sf+NH9/y2//Cl614+UrCzNyP/ZanR3aqjMKSMz3DMbn2z1q87eb7/qn3tfm9//dX9\n3P7GNp9us+tns7vP9DT4w5/jc7TO3O/T0/7t8M7Xv+NzhgwO8+//6/e7u7ddf2Wef+5/xqfo\nM6z1gFrr150834fK3+55++uP7s/2N54/+ufute9/7n557f47/eHlIR2O0rO3X7MgpMH/BkD3\nvdyuuzKTQ0r+DGs9oNb6dSfP4e/cH93f7Qeb3W9s33nbnYievg6xH6c/nBnS+X8qCmkizvPb\nuyikic+w1gNqrV938hxC+rsN5nf3cviNwz2bpAtiIyEd/LSHMIND/LCElJBqfIa1HlBr/bqT\n59jJU/e2f6AUHNLpftJypRu8HZzSwg7z+p+hnVnr1508x05+d6+br7+g33Z37Z4Pd+2SsOOb\nQUjXj2fmkOTDPHGhhLR81vp1J8/phPPU7S847H79eO5+7q4zvO4u5D2nYsejc+Ju2KwyfHvx\nCKYbM3ODX/4Z1ntArfXrTp5TSL+77tf+N553l7+3733sL3/vrj2kcIcHRWeXv/uce4hn0AEZ\nHuaDT5X2hGnqZ+jXe0Ct9etOnsERuL9Tt/v1uXvZPyH79rKt6s+jVjY+9W9YDp3hsBvJ8+fr\nuVfdF8OcPe4y/Qx2w24kz/P+xQ3CIZW/IlbgM7gN25E4Xfd9VYEjiRkMR0PibA6vYCAkZjAc\nDQwTMITEMAFDSAwTMITEMAFDSAwTMITEMAFDSAwTMITEMAFDSAwTMITEMAFDSAwTMITEMAFD\nSAwTMITEMAFDSAwTMITEMAFDSAwTMITEMAFDSAwTMITEMAFDSAwTMITEMAFDSAwTMITEMAFD\nSAwTMITEMAFDSAwTMITEMAFDSAwTMITEMAFDSAwTMHVDevdyzZaLW9dNYgmpPovr6RKSGIvr\n6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr\n6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr\n6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr6RKSGIvr\n6RKSGIvr6RKSGIvr6RKSGIvr6SqF9Pn5WcWtgdrd0Lh1XUISY3E9XUISY3E9XUISY3E9XUIS\nY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUIS\nY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUIS\nY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUISY3E9XUIS\nY3E9XUISY3E9XUISY3E93fuF9D4725Dm/xDDmE5QSPOlcUbCtXW5ayfG4nq6hCTG4nq6hCTG\n4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG\n4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG4nq6hCTG\n4nq6hCTG4nq6hCTG4nq6hCTG4nq6SiH1dUpS2Dnc1l1CEmNxPV1CEmNxPV1CEmNxPV1CEmNx\nPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNx\nPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNx\nPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNx\nPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNx\nPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNx\nPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPd3gkDb7\nGX6QshRCwnV1a5yRNhdvFy+FkHBd3Qohba7eWboUQsJ1dSuGlNgRIeEau/EhnU5I5w+R3udn\nG9KCP8UwlpMd0tlH88MZCdfXrXhGGvloZimEhOvqhoe0ufnh7aUQEq6rWzEk7trhrsetHFLK\nlTtCwvV1a4W0ryjphQ2EhGvs8lo7MRbX0yUkMRbX0yUkMRbX0yUkMRbX0yUkMRbX0yUkMRbX\n0yUkMRbX0yUkMRbX0yUkMRbX05UKqU5JCjuH27pLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdL\nSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdL\nSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdL\nSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdL\nSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdL\nSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdL\nSGIsrqdLSGIsrqcrF1J8SQo7h9u6qxVSlVOSws7htu4SkhiL6+kSkhiL6+kSkhiL6+kSkhiL\n6+kSkhiL6+kSkhiL6+kSkhiL6+kSkhiL6+kSkhiL6+kSkhiL6+kSkhiL6+kSkhiL6+kSkhiL\n6+kSkhiL6+kSkhiL6+kSkhiL6+kSkhiL6+kSkhiL6+kSkhiL6+neL6T3JbMNadGfYxi7CQpp\nvrSeMxKuq8tdOzEW19MlJDEW19MlJDEW19MlJDEW19MlJDEW19MlJDEW19MlJDEW19MlJDEW\n19MlJDEW19MlJDEW19MlJDEW19MlJDEW19MlJDEW19MlJDEW19PVCym8JIWdw23dFQupxilJ\nYedwW3cJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJ\nSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJ\nSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJSYzF9XQJ\nSYzF9XQJSYzF9XQFQ4ouSWHncFt31UKqcEpS2Dnc1l1CEmNxPV1CEmNxPV1CEmNxPV1CEmNx\nPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNx\nPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV1CEmNxPV3FkIJLUtg53NZd\nuZDiT0kKO4fbuktIYiyup0tIYiyup0tIYiyup0tIYiyup0tIYiyup0tIYiyup0tIYiyup0tI\nYiyup0tIYiyup0tIYiyup0tIYiyup0tIYiyup0tIYiyup0tIYiyupxsd0mY3g/fTl0JIuIZu\neEgX7yaUREi4vi4hibG4nm5wSJvL97NCii1JYedwW3ejQxo+RDr+8vWZls42pMV/lmFsJimk\nQTyZZ6Tw+3YKfwXhtu6WnZH++9F1/fPfi98lJNzVuSUhfTx12+m77s/57xMS7urckpBeutdt\nRf2v7vn4W9y1w12nWxLSNqLj/75n05/aISTc9bjBIR1fzbAZvJ+4FELC9XMD7tq9di+hSyEk\nXD+36GLDptvP5i10KYSE6+eWXf7++dR1T68fsUshJFw/V+/bKAgJ19AlJDEW19Mtu2p3mNCl\nEBKun0tIYiyup1t+1+7t+WfsUqK/j0Jh53BbdwMeI310MSUdl0JIuHZuxMWG4Lt2hITr5waE\n9KtLeSHQgqUQEq6dG3Kx4TV2KYSEa+cGhLSJ6YiQcI1dwSdkCQnXzyUkMRbX080OqRtO7FII\nCdfOJSQxFtfT5a6dGIvr6RKSGIvr6RaF9Frtrl1kSQo7h9u6WxLSa6XHSMGnJIWdw23dLQlp\n0/197t4+ni9/QGTxUggJ180te2VD/7P73X8MfkBkzFIICdfNLQzpd/df/Ku/CQnXzi0J6Uf3\n66176v8QEu7q3ZKQdgU97641xP6ASELC9XOLLn//ftr9uNWg76IgJFxjV/EJWULCtXOzQ4r5\nMcXDISRcXzf/RavPv4J+VPH1UggJ183NDmn3r/XFtkRIuL5u/mOkt91P0O9+/K6wlNgX2yns\nHG7rbtHFhq+WXoJaGiyFkHDN3NKrdl8tRS+FkHDN3IDL378JCXf1bsgZKfgHRBISrp3LYyQx\nFtfTLb1qF1VRT0i4zm7R80iB1757QsJ1diVf2UBIuG5udkjBFfWXIcWVpLBzuK27kq/+jj0l\nKewcbusuIYmxuJ4uIYmxuJ4uIYmxuJ4uIYmxuJ4uIYmxuJ4uIYmxuJ4uIYmxuJ6ubkhhJSns\nHG7rrmhIkackhZ3Dbd0lJDEW19MlJDEW19MlJDEW19MlJDEW19MlJDEW19MVDimqJIWdw23d\nVQ0p8JSksHO4rbuEJMbierqEJMbierqEJMbierqEJMbierqEJMbierrKIQWVpLBzuK27siHF\nnZIUdg63dZeQxFhcT5eQxFhcT5eQxFhcT5eQxFhcT1c6pJiSFHYOt3VXN6SwU5LCzuG27hKS\nGIvr6RKSGIvr6RKSGIvr6RKSGIvr6WqHFFKSws7htu4KhxR1SlLYOdzWXUISY3E9XUISY3E9\nXUISY3E9XfGQIkpS2Dnc1l3lkIJOSQo7h9u6e7+Q3tNnG1LG/4thJCcopPnSrn6HMxKui8td\nOzEW19NVDymgJIWdw23dlQ4p5pSksHO4rbuEJMbierqEJMbierryIZWXpLBzuK272iGFnJIU\ndg63dZeQxFhcT5eQxFhcT1c/pOKSFHYOt3VXPKSIU5LCzuG27hKSGIvr6RKSGIvr6RqEVFqS\nws7htu6qhxRwSlLYOdzWXUISY3E9XUISY3E9XYeQCktS2Dnc1l35kMpPSQo7h9u6S0hiLK6n\naxFSWUkKO4fbuqsfUvEpSWHncFt3CUmMxfV0PUIqKklh53Bbdw1CKj0lKewcbusuIYmxuJ6u\nSUglJSnsHG7rrkNIhackhZ3Dbd0lJDEW19N1CamgJIWdw23dtQip7JSksHO4rbuEJMbiero2\nIeWXpLBzuK27HiEVnZIUdg63ddcnpOySFHYOt3XXJKSSU5LCzuG27hKSGIvr6RqFlFuSws7h\ntu66hFRwSlLYOdzWXaeQMktS2Dnc1l2bkPJPSQo7h9u6axVSXkkKO4fbuusTUvYpSWHncFt3\nCSl3zG5o3LquV0hZJSnsHG7rrlFIuackhZ3Dbd01CymnJIWdw23ddQop85SksHO47br/7Mct\npIySCAm3gvvP+ViFlHdKIiTcMPefqbELKb0kQsItdSf72U06+/CQskoiJNw892Y+/2SzCiHl\n3LkjJNwkNyGfFHYwGiGllkRIuAvclNNPAjs6AiFlnJIICXfaLctnkr09IiEllkRIuFduVD8X\n7MJRCCn9lERIuIeJzuc0liGllURIq3fr9XMcv5CSSyKktbp36Oc4hiGl3rkjpLW5N/tROBx0\nQkopSWHncO/gLjv/KBwOIiEllqSwc7j13MT7bwqHg0pIaXfuFHYON97NfACkcDgohbS8JIWd\nww1zSy8gKBwOMiEllaSwc7jFbmE/k27QmIaUUpLCzuHmuqUnoCk3elxDSniYpLBzuKkT3c9x\nFA4HsZAWlqSwc7hLp1pAh1E4HJRCWl6Sws7hzk3tfo6jcDhIhbS4JIWdw52ayYBE1xvCaoW0\n9GGSws7hXs7sGUhsvaGsXkhLSlLYOdzDLL4LJ7LeKqxYSAtLUtg53OTHQGb7YB3SspIUdm69\nbvZFBLN98A5pUUkKO7dCNzegObd0FA4HvZCWlKSwcytySwOacqNG4XAQDGlBSQo7twY3KKAr\nN3gUDgfFkOZLUti5lt2oU9ClG7K6u7n+Ic2WpLBzTbp1AjqMzz6ks5ohzZWksHNtuXUL+h6D\nfchmRUOaKUlh59pw7xLQYYT3oZhVDel2SQo7Z+7eKkhxvQ9wo0PabGf4/ubWHy5YysXcKklh\n51zdBecgqfU+zg0OaXP8ZfC2xlIu50ZJCjtn5y6/E6ex3oe7rYR0oySFnfNxkx8GNboPVdmF\nj5E2Z2/qLOV6JktS2DkDN/dCQmv7cA82MaTzh0jvtWdXUvVP0uKMFvToRTU4qSGd3bO708WG\n/UyckxT+CtJ0M89Bs27ImLkVzkibyQ8ClzI6n6MpKeycmBtS0IgbOWZufEibGx/FLWV8RktS\n2DkZNzKhoRs/Zm54SJvz9+4b0mhJCjv3eDe+oO8x2weJw2HJE7Ln76ZcuYv5Cq9TUti5R7q1\nCvoem32o60Y/j3S4VLfpz1/lEL2U6bkqSWHnHuJWOwmdjf4+3MVt47V2Z3NZksLO3dkdK0h5\nvQ24DYZ0mZLCzt3NnT4Jaa63GbfJkM5LUti5O7hzd+PU1tuY22ZIXyV9xruD0bmhlz0S0llv\nk26jIQ1PSgo7V8lNuZigsN6G3WZDOp2UFHYu3E2/Hmd2YLq57YZ0PCkp7Fygm3tJ2+zAdHNb\nDun7pKSwcyFubkJzbtngprNuIU29jDVk7nlDlyU07UYMbjrrF9LZ5bvYudMNHZDQqBs2uOms\nYUj1Uqp+Q4cldOEGD246axlSrZJq3tChBQ3cGoObznqG9F4npTrLDT4NDcbswHRzVxFSlbNS\n/W93iOXNDkw3dyUhfZcUmVLgcuudhgZjdmC6uWsJKT6lmOVeJ2R2AOFmsNYhRadUvNyJ05DZ\nAYSbwZqHFJtSyXJv3ZMzO4BwM1j7kCJTylzu7KMhswMIN4NtIKS4lNKXu+yKgtkBhJvBNhFS\nVEpJy024Kmd2AOFmsI2EFJPS0uWmXtk2O4BwM9hmQjqmVNDSkuXmPDtkdgDhZrANhVSe0sxy\ns59hNTuAcDPYpkIqTWl6udkNzbhlg1vVXXNIfVFL42xZRNNu+eBWdVceUkFKV2x5Q+Nu0OBW\ndVcf0imlxJbO2JiGrt3Awa3qEtJuclo6sEEnois3enCruoT0Nekp7djgho5ujcGt6hLScRJb\nqhHRbh69DbgJ8+9xCGk4S1uq1NB+BLYB9+b8OzaEdD6fsy3VjGg3EtuAezmj9RDSrbnRUu2I\ndqOyDbj9fD7/5rHrCKkfb+kyIqHl4oa6y+tJYgezmpD6i5bGzkRay8UtdXPqWcCOzppC6oct\njd2dk1subrqbdfKZZ+dmZSFtz0Sfg5ji2JuDW90Nq+ecXT7rCun7JPR5dievnJ0b3EpujXxO\nQ0ijc/6YaLQlpeXiTk7VegZDSNczeon7KiaZ5eJez73yOQ0hnc+tJ4o+z2KSWC7ucBblw2vt\n6rvzz7Z+fo7ezYucx2+Dm5t29iGkuu7y1yxUbunxB6aHm3vnjZAquskv/KkYU2sHfLBb/NiH\nkGq5mS+fe690N6+RAz7YLe5nwg2btYeU/xrUHftZISbvAz7YDcvnwo2fVYdU9EruAxsdk+UB\nHzwV+jkOIcW6xd8PccYG1uR0wAe7Nfs5DiFFuqUVjbFBMRkc8MHuXfo5DiGFuQEVjbG7+Syv\nSfeAD3Zn+pFbbyDbQkghEV2zwymryewASncXnn9k1luBtQ8p5lx0xY7MZ3ZNZgfQYjf1/tuj\n11uT9Q4psqJ+0XKzajI7gApegVDm5g4hlbmxFfXLl3tZ01xOZgfQpFt6AcFsH9YRUnhFfeJy\nE2oyO4Cu3MJ+Jt2oIaTcqVFRn7Pcq5pGczI7gI5uVECXbvQQUt5Uyih/uXM5mR1A4QEdxmwf\n2g6pWkV94XKvazrm5HIA1QroMC77kMOahVSxoj5kuaM5qR9AtQM6jPo+lLBWIR0zUti5WzOS\nk+Q3DN4poMMQUu5EfoXDk5HCzs1P9ZzCX8pT6s6MmdtkSOf36RR2bumM5fSw73NadgYyO+Al\nDgePkC4fGinsXKJbo6eE9SbdhzM74CUOB4eQri8wKOxcljuaU3ZQC9ab9SDI7ICXOBz0Qxq7\nTqewcyVuUE+31ltyGcHsgJc4HNRDGr/crbBzAe5ET4uDGnUDLsSZHfASh4N2SFPPGinsXKCb\nG9S5Wx7Q0vXmjpnbTEjTT74q7Fy8O9XTZFE3XxNXf72tu42EdOs1DAo7V89dHNR7dEF5623V\nbSKk2y8FUti5+u50UJ+VCipbb2tuAyHNvaJOYefu6M4WFbLK06juw51d+5DmX5iqsHP3dre9\n3Agq9MVH0vtwP9c9pAWv71bYufu513fibhZVnpToPtzb9Q5p0bdJKOzcPdyZR0LvN+/15Tcl\ntw+PcZ1DWvjdRgo7V9dddC1h6M4UldSU0D480jUOael37SnsXCU35XLcuDubVOITvXFj5tqG\ntPybXxV2LtxNv6I962Y2ZXbASxwOQiElfA+5ws5FuplPCqWsd76pU1RmB7zE4SATUtLPYlDY\nuRi36GnV+Cd6l9/9yxlCyp3lS0n7kSYKO1fqFiV0w02aRU2FVUVIU58pbPYdxXHaM3JH7tFL\n2s3CqD4/H71QoQkKab60ZX8s+SdsKfwVlOUGnIZG3diZf34q72zFGSl3li0l/SfVKexcohub\n0MmtMZfu8qpuZ0VIubNoKRk/8VFh55ZPhYS+5jEHZkJWF2ERUu4sWErWD05V2LklU+M0NBiF\nAzMpqyrXAjUOh0eHlPcDiBV2bmbqJvQ1CiGdT1pWUWUpHA4PDinzB3kr7Nz0XF+Ti3GvRt9N\nDkvpH7s2Cin35+Er7NzojJ+G9A/4O7npXS1KS+FweGhI2f+uhMLOXc6Nu3J2B/zd3Kyyrn92\nxb2We2MeGVL+v8+isHODmXs45H/A383NLOvx/9jHA0Mq+HeOdEJadEmhwQP+fm52WsV1mYRU\n0JFGSMsvy0kdmA24JW0l1OURUklHDw8p8dK2+oHZgFvW1nheFiEVdfTIkHKeHjI8MJtwC9ty\nCKmso0eFlPsUaysHZhNuUyEVdvSAkHIbmnOLBjfM9QyptKP7hlTU0A23fHCruvIhFXd0v50r\nj2jcjRncqq56SOUd3WfnQhoaceMGt6orHlJAR9V3Lq6hczd4cKu6+iFVcQNmzwZHdHQrDG5V\nVzukiBNStZ2rENHeDZNw7+hKhxTSUY2dq9TQfswOINwM9s4hxXQUvXM1I9qN2QGEm8HeP6Qq\nbv7Ujmg3ZgcQbgZ735CCTkhRO3fZkNkNjVvX1Q0pqqOInRs7EZnd0Lh1XemQqripM3VvzuyG\nxq3ryoYUdkIq2blbD4nMbmjcuq5qSHEdZe/czHUFsxsat64rHFIVd+EsuDhndkPj1nVFQwo8\nISXv3MIr3GY3NG5dVzekKu7sLH+eyOyGxq3raoYUeUJa/iWmPdlqdkPj1nVlQ6ri3pjkVyyY\n3dC4dV3JkEJPSAu+xKzX/Zjd0Lh1XdWQqrijk/viObMbGreuqxhS7Anp1peYdSqaZ4sG19IV\nDamKezEFEd1iSwfX0hUMKfiENPollpyKbrARg2vpaoZUxT1OeUSjbNDgWrqrCymmois2bnAt\nXb2Qou/ZDb/EqIgu2NDBtXQlQ6rihlbU293QuHXdtYQUXFFvd0Pj1nXlQgq/Z3f2A+gi2UAL\n195VDClUrVNRb3dD49Z12w6pWkW93Q2NW9dVCynynl29iHZjdkPj1nUFQ4rRThUp7Bxu626b\nIZ2dixR2Drd1VyykiHt2l4+LFHYOt3VXL6QyZOTqgsLO4bbuNhXS+DU6hZ3Dbd1tKKSpi3QK\nO4fbuqsVUv5DpBuXuhV2Drd1Vy6knP/n7SeMFHYOt3W3gZDmnndV2Dnc1l33kBa8ekFh53Bb\nd71DWvQaIIWdw23dlQop7VrD0pfSKewcbuuuWkiL//TyF6Qq7Bxu665nSEmv61bYOdzWXceQ\nEr87QmHncFt37UJK/yYjhZ3Dbd1VCmnBtYacb9VT2Dnc1l2xkG7/ibzveFXYOdzWXZ+Q8irq\nNXYOt3XXJaTsjDR2Drd1Vymk6f9UkJHGzuG27hqEVFTRDbdwzG5o3LqufEilGWnsHG7rrnhI\n5Rlp7Bxu6650SAEVjbohY3ZD49Z1hUOKyUhj53Bbd2VDispIY+dwW3dFQ4rLSGPncFt3JUOK\nzEhj53BbdwVDis1IY+dwW3flQorOSGPncFt3xUKKz0hj53Bbd6VCqpGRxs7htu4qhVQlI42d\nw23dVQqpr5GRxs7htu5KhWTlmi0Xt64bHdJmO2PvRy/l8a7ZcnHrusEhbY6/nL8fvpSEUdg5\n3NZdQhJjcT1dQhJjcT3d+4X0zjCrnqCQZqflv4JwW3e5ayfG4nq6hCTG4nq6hCTG4nq6hCTG\n4nq6tV7ZsBm8X0N15Z0AAAK3SURBVGMpj3fNlotb1+W1dmIsrqdLSGIsrqdLSGIsrqdLSGIs\nrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIs\nrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqdLSGIsrqcrFBLDrGQIiWEChpAYJmAI\niWEChpAYJmAIiWEChpAYJmAIiWEChpAYJmAIiWECpmZIif90xSPm+C9tfL8z/PihC5uYqXWK\nrnczXK/8/n6taGprZ5ZcMaTUf0zpAXP652rOP5Zd+sQ6Zde7G5f9Pf3jRWNbO7dkQrK5oXdj\nGNLYP1SnuN5NT0hlszmtUvmG3s3UOlXXu5vB31Pi6yWkstkM7sIfPu57yaVPrVN1vf1haRb7\nS0hF43Rg5t7KD5ybR6fWEFLRbAbvaN/Q32MY0uE97fUSUskY3dDfYxXS5uxd7fUSUsFsTr/K\n39COd+2c9peQ8mdzejP2WEltptaput5hSPr7qxqS5tPXZ7OZesZddemZT7s/bg5/Uzms9zt6\nuVc2MMx6hpAYJmAIiWEChpAYJmAIiWEChpAYJmAIiWEChpAYJmAIiWEChpAYJmAIyW267U32\nn97ra9Y+hOQ2u5A6bja14RZxHEKSG24Rt9lG1HX7kj5euu7lY/9bfzfPj17XyoeQ3OYU0mb3\n9mn/W8/dy6PXtfIhJLc5Pkb62b32/Wv33+7D10evavVDSG5zDOlpf9t1P3Yfvj14UQwhuc0x\npO57uPagMNwEbkNIksNN4DYXd+0Ov8U8drgJ3OYY0uvuEsOv7pmQFIabwG2+Qtr0/cf+8nf3\nl5AUhpvAbfavtduF1L+9dN3zn56QFIabgGEChpAYJmAIiWEChpAYJmAIiWEChpAYJmAIiWEC\nhpAYJmAIiWEC5n8m22pcLtvxrAAAAABJRU5ErkJggg==",
+      "text/plain": [
+       "plot without title"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cost.df %>% filter(iter > 30) %>%\n",
+    "ggplot() + geom_line(aes(iter, w1, col = 'steelblue'), size = 1) + \n",
+    "geom_line(aes(iter, w2, col = 'palegreen3'), size = 1) + \n",
+    " geom_line(aes(iter, cost, col = 'darkorange'), size = 1) + \n",
+    "ylab(\"Value\") + theme_minimal() + scale_colour_manual(name = 'Type', \n",
+    "                      values =c('steelblue'='steelblue','palegreen3'='palegreen3', 'darkorange'='darkorange'), \n",
+    "                                                      labels = c('Cost', 'Weight 2', 'Weight 1')) +\n",
+    "theme(legend.position = \"top\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 로지스틱 모델 해석"
    ]
   },
