--- a/Decision Tree.ipynb
+++ b/Decision Tree.ipynb
@@ -448,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## rpart 패키지"
+    "## rpart package"
    ]
   },
   {
@@ -644,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# party 패키지"
+    "## party package"
    ]
   },
   {
