--- a/Support Vector Machine.ipynb
+++ b/Support Vector Machine.ipynb
@@ -13,8 +13,7 @@
    "id": "liked-worst",
    "metadata": {},
    "source": [
-    "서포트 벡터 머신(Support Vector Machine, SVM)은 매우 강력하고 선형이나 비선형 분류, 회귀, 이상치 탐색에도 사용할 수 있는 다목적 머신러닝 모델  \n",
-    "특히 복잡한 분류 문제에 잘 들어맞으며 작거나 중간 크기의 데이터셋에 적합"
+    "서포트 벡터 머신(Support Vector Machine, SVM)은 매우 강력하고 선형이나 비선형 분류, 회귀, 이상치 탐색에도 사용할 수 있는 다목적 머신러닝 모델이다. 특히 복잡한 분류 문제에 잘 들어맞으며 작거나 중간 크기의 데이터셋에 적합하다."
    ]
   },
   {
@@ -135,7 +134,7 @@
    "id": "ecological-administration",
    "metadata": {},
    "source": [
-    "Iris 의 두 클래스는 직선으로 확실하게 나뉘어져 있음(=**선형적으로 구분**)"
+    "Iris 의 두 클래스는 직선으로 확실하게 나뉘어져 있다(=**선형적으로 구분**)."
    ]
   },
   {
@@ -143,7 +142,8 @@
    "id": "official-detection",
    "metadata": {},
    "source": [
-    "왼쪽 그래프에는 세 개의 선형 분류기에서 만들어진 결정경계가 있는데, 이 결정 경계 중 점선(초록색)은 클래스를 적절하게 분류하고 있지 못하고 나머지 두 개는 훈련 세트에 대해 완벽하게 동작함"
+    "왼쪽 그래프에는 세 개의 선형 분류기에서 만들어진 결정경계가 있는데, 이 결정 경계 중 점선(초록색)은 클래스를 적절하게 분류하고 있지 못하고 나머지 두 개는 훈련 세트에 대해 완벽하게 동작한다.  \n",
+    "오른쪽 그래프에 있는 실선은 SVM 분류기의 결정 경계로, 이 직선은 두 개의 클래스를 나누고 있을 뿐만 아니라 제일 가까운 훈련 샘플(빨강점)으로부터 가능한 한 멀리 떨어져 있다."
    ]
   },
   {
@@ -151,9 +151,8 @@
    "id": "binary-dayton",
    "metadata": {},
    "source": [
-    "오른쪽 그래프에 있는 실선은 SVM 분류기의 결정 경계로, 이 직선은 두 개의 클래스를 나누고 있을 뿐만 아니라 제일 가까운 훈련 샘플(빨강점)으로부터 가능한 한 멀리 떨어져 있음  \n",
-    "SVM 분류기는 클래스 사이에서 가장 폭이 넓은 결정 경계를 찾는 것으로, 그래서 라지 마진 분류라고 함  \n",
-    "점선 바깥쪽에 훈련 샘플을 더 추가해도 결정 경계에는 전혀 영향을 미치지 않고, 점선에 위치한 샘플(빨강점)에 의해 전적으로 결정되는데 이런 샘플을 **서포트 벡터(Support Vector)** 라고 함"
+    "SVM 분류기는 클래스 사이에서 가장 폭이 넓은 결정 경계를 찾는 것으로, 그래서 라지 마진 분류라고 한다.  \n",
+    "점선 바깥쪽에 훈련 샘플을 더 추가해도 결정 경계에는 전혀 영향을 미치지 않고, 점선에 위치한 샘플(빨강점)에 의해 전적으로 결정되는데 이런 샘플을 **서포트 벡터(Support Vector)** 라고 한다."
    ]
   },
   {
@@ -229,9 +228,8 @@
    "id": "broke-payment",
    "metadata": {},
    "source": [
-    "SVM은 특성의 스케일에 민감함  \n",
-    "위의 왼쪽 그래프에서는 수직축의 스케일이 수평쪽의 스케일보다 훨씬 커서 결정경계가 거의 수평에 가깝게 됨  \n",
-    "특성의 스케일을 조정하면 결정 경계가 훨씬 더 좋아짐"
+    "SVM은 특성의 스케일에 민감하다. 위의 왼쪽 그래프에서는 수직축의 스케일이 수평쪽의 스케일보다 훨씬 커서 결정경계가 거의 수평에 가깝게 된다.  \n",
+    "특성의 스케일을 조정하면 결정 경계가 훨씬 더 좋아진다."
    ]
   },
   {
@@ -311,12 +309,12 @@
    "id": "ethical-protest",
    "metadata": {},
    "source": [
-    "모든 샘플이 점선 경계 바깥쪽에 올바르게 분류되어 있다면 이를 **하드 마진 분류**라고 함  \n",
-    "하드 마진 분류에는 두 가지 문제점이 존재\n",
+    "모든 샘플이 점선 경계 바깥쪽에 올바르게 분류되어 있다면 이를 **하드 마진 분류**라고 하는데,  \n",
+    "하드 마진 분류에는 두 가지 문제점이 존재한다.\n",
     "1. 데이터가 선형적으로 구분될 수 있어야 제대로 작동\n",
     "2. 이상치에 민감\n",
     "\n",
-    "이런 문제를 피하기 위해 점선 경계를 가능한 한 넓게 유지하는 것과 **마진 오류**(샘플이 점선 경계 중간이나 반대쪽에 있는 경우)사이에 적절한 균형이 필요한데, 이를 **소프트 마진 분류** 라고 함"
+    "이런 문제를 피하기 위해 점선 경계를 가능한 한 넓게 유지하는 것과 **마진 오류**(샘플이 점선 경계 중간이나 반대쪽에 있는 경우)사이에 적절한 균형이 필요한데, 이를 **소프트 마진 분류** 라고 한다."
    ]
   },
   {
@@ -497,8 +495,8 @@
    "metadata": {},
    "source": [
     "사이킷런의 SVM 모델을 만들 때 여러 하이퍼파라미터 중 *C*는 이런 이런 하이퍼파라미터 중 하나로,  \n",
-    "이를 낮게 설정하면 위의 왼쪽 그림과 같은 모델을 만들고, 높게 설정하면 오른쪽과 같은 모델을 얻음  \n",
-    "이 경우, 왼쪽 모델에 마진 오류가 많지만 일반화는 더 잘 될 것 같아 보임  \n",
+    "이를 낮게 설정하면 위의 왼쪽 그림과 같은 모델을 만들고, 높게 설정하면 오른쪽과 같은 모델을 얻을 수 있다.  \n",
+    "이 경우, 왼쪽 모델에 마진 오류가 많지만 일반화는 더 잘 될 것 같아 보인다.  \n",
     "* SVM 모델이 과대적합이라면 C를 감소시켜 모델을 규제할 수 있음\n",
     "    * C를 낮출 경우 -> 마진 오류를 허용함(=점선 경계 폭이 넓어짐)\n",
     "    * C를 높일 경우 -> 마진 오류를 최대한 줄임(=점선 경계 폭이 줄어듬)"
@@ -1196,118 +1194,6 @@
     "하나는 마진을 크게($\\epsilon=1.5$)하고 다른 하나는 마진을 작게 ($\\epsilon=0.5$)로 하여 만든 경우임  \n",
     "마진 안에서는 훈련 샘플이 추가되어도 모델의 예측에는 영향이 없기 때문에 $\\epsilon$에 민감하지 않음"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "necessary-laundry",
-   "metadata": {},
-   "source": [
-    "# 4. SVM 이론"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "packed-surrey",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "polish-membrane",
-   "metadata": {},
-   "source": [
-    "## 4.1 결정 함수와 예측"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "earlier-return",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "smooth-booth",
-   "metadata": {},
-   "source": [
-    "## 4.2 목적 함수"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "juvenile-nashville",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "valued-foundation",
-   "metadata": {},
-   "source": [
-    "## 4.3 쿼드라틱 프로그래밍(Quadratic Programming, QP)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "stupid-physiology",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "further-tonight",
-   "metadata": {},
-   "source": [
-    "## 4.4 쌍대 문제"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "wired-tournament",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "infectious-internship",
-   "metadata": {},
-   "source": [
-    "## 4.5 커널 SVM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "expected-strap",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "affected-essex",
-   "metadata": {},
-   "source": [
-    "## 4.6 온라인 SVM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "attached-synthesis",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
