--- a/DeepLearning/TensorFlow API.ipynb
+++ b/DeepLearning/TensorFlow API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "italic-circuit",
    "metadata": {},
    "outputs": [],
@@ -530,7 +530,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "offensive-mustang",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -550,9 +552,192 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "alleged-stretch",
+   "metadata": {},
+   "source": [
+    "# 사용자 정의 모델과 훈련 알고리즘"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "liable-detail",
+   "metadata": {},
+   "source": [
+    "## 사용자 정의 손실 함수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "backed-klein",
+   "metadata": {},
+   "source": [
+    "회귀 모델을 훈련하는데 훈련 세트에 잡음 데이터가 조금 있는 경우, 이상치 제거 등을 통해 데이터를 수정할 수 있지만 여전히 노이즈 데이터가 남아있을 것이다. 이런 경우, 평균 제곱 오차는 큰 오차에 너무 과한 벌칙을 가하기 때문에 정확하지 않은 모델이 되고, 평균 절대값 오차는 이상치에 관대해서 훈련이 수렴되기까지 시간이 걸리고 정밀하게 훈련되지 안흔다. 이럴 때 평균 제곱 오차 대신 Huber 손실을 사용하면 좋다. Huber 손실은 아직 공식 Keras API에서 지원하지 않기 때문에 직접 구현해야 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "crazy-parker",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def huber_fn(y_true, y_pred):\n",
+    "    error = y_true - y_pred\n",
+    "    is_small_error = tf.abs(error) < 1\n",
+    "    squared_loss = tf.square(error) / 2\n",
+    "    linear_los = tf.abs(error) - 0.5\n",
+    "    return tf.where(is_small_error, squared_loss, linear_loss)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "clinical-russia",
+   "id": "satisfactory-marshall",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss=huber_fn, optimizer=\"nadam\")\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "generic-quarterly",
+   "metadata": {},
+   "source": [
+    "## 사용자 정의 요소를 가진 모델을 저장하고 로드하기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "intelligent-gazette",
+   "metadata": {},
+   "source": [
+    "케라스가 함수 이름을 저장하므로 상요자 정의 손실 함수를 사용하는 모델은 아무 이상 없이 저장된다. 모델을 로드할 때는 함수 이름과 실제 함수를 매핑한 딕셔너리를 전달해야 한다. 좀 더 일반적으로 사용자 정의 객체를 포함한 모델을 로드할 때는 그 이름과 객체를 매핑해야 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "distinguished-flooring",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.models.load_model(\"my_model_with_a_custom_loss.h5\",\n",
+    "                                custom_objects={\"huber_fn\":huber_fn})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "proud-democrat",
+   "metadata": {},
+   "source": [
+    "## 활성화 함수, 초기화, 규제, 제한을 커스터마이징하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "suspected-intro",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_softplus(z):\n",
+    "    return tf.math.log(tf.exp(z) + 1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "qualified-pursuit",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_glorot_initializer(shape, dtype=tf.float32):\n",
+    "    stddev = tf.sqrt(2./(shape[0]+shape[1]))\n",
+    "    return tf.random.noraml(shape, stddev=stddev, dtype=dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "communist-guinea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_l1_regularizer(weights):\n",
+    "    return tf.reduce_sum(tf.abs(0.01*weights))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "typical-petersburg",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_positive_weights(weights):\n",
+    "    return tf.where(weights<0., tf.zeros_like(weights), weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "inclusive-excitement",
+   "metadata": {},
+   "source": [
+    "매개변수는 사용자 정의하려는 함수의 종류에 따라 다르다. 만들어진 사용자 정의 함수는 보통의 함수와 동일하게 사용할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "forbidden-summit",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer = keras.layers.Dense(30, activation=my_softplus,\n",
+    "                           kernel_initializer=my_glorot_initializer,\n",
+    "                           kernel_regularizer=my_l1_regularizer,\n",
+    "                           kernel_constraint=my_positive_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adverse-yemen",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "focused-ontario",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "numerical-tutorial",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "secondary-trinity",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "willing-comment",
    "metadata": {},
    "outputs": [],
    "source": []
